# practice

./: .gitignore  README.md  cipherPseudo.txt  day4.cpp  day5.cpp  detab  detab.c  ex22  flags.c  htoi  inventoryTracker  inventoryTracker.c  lines.c  main.c  minishell.c  pow.c  psuedo.txt  ranges  ranges.c  text  text.c  text.h  text_test  text_test.c
algos/: da.c  da.h  ll.c  ll.h
algos/dynamicArray/: da.h  dynamic.c
algos/linkedList/: linked  linked.c  ll.c  ll.h
inventory/: inventory  inventory.c  inventory.h  main.c
kilo/: main.c
numalyzer/: CMakeLists.txt  Doxyfile  sudoku.c
numalyzer/src/: alphalyzer.c  numalyzer.c
random/: ex22.c  fahr.c  htoi.c  lines.c  main.c  pow.c  ranges.c  smallFuncs.c  store.c  store.h  text.c  text.h  text_test.c
script/: hello.sh
sudoku/: main.c  main.h
